[gd_scene load_steps=16 format=3 uid="uid://chmx1t37p04md"]

[ext_resource type="Script" path="res://scripts/patrol_demon.gd" id="1_701id"]
[ext_resource type="Texture2D" uid="uid://bt8o150de256p" path="res://enemy/Desappearing (96x96).png" id="4_8idmy"]
[ext_resource type="AudioStream" uid="uid://v76gnkus4rxj" path="res://audio/SFX/hurt_1.wav" id="4_i14op"]
[ext_resource type="Texture2D" uid="uid://b6gi7xu5j0rl2" path="res://enemy/demonflying.png" id="4_tfbi8"]
[ext_resource type="AudioStream" uid="uid://ccu53ktaug6i8" path="res://audio/SFX/boom_1.wav" id="5_gid1n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c6fpp"]
atlas = ExtResource("4_8idmy")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tm2p"]
atlas = ExtResource("4_8idmy")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6bf4"]
atlas = ExtResource("4_8idmy")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ndi"]
atlas = ExtResource("4_tfbi8")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2pca"]
atlas = ExtResource("4_tfbi8")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncdpy"]
atlas = ExtResource("4_tfbi8")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcr6h"]
atlas = ExtResource("4_tfbi8")
region = Rect2(243, 0, 81, 71)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2ww1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6fpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tm2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6bf4")
}],
"loop": true,
"name": &"killed",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ndi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2pca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncdpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcr6h")
}],
"loop": true,
"name": &"running",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7rwe4"]
radius = 12.0104

[sub_resource type="CircleShape2D" id="CircleShape2D_cjkp4"]
radius = 13.537

[node name="patrol-demon" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_701id")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(2, -1.66667)
scale = Vector2(0.378601, 0.366197)
sprite_frames = SubResource("SpriteFrames_u2ww1")
animation = &"running"
autoplay = "running"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7rwe4")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_cjkp4")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-12.6667, -0.666667)
target_position = Vector2(0, 17)

[node name="killed_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="SFX_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_i14op")
volume_db = -20.0
bus = &"SFX"

[node name="SFX_kill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gid1n")
volume_db = -20.0
bus = &"SFX"

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="killed_timer" to="." method="_on_killed_timer_timeout"]
